[package]
name = "p4-to-gcl"
description = "Compiles P4 code to GCL (Guarded Command Language)"
version = "0.1.0"
authors = ["Mark Drobnak <mtd8050@rit.edu>"]
edition = "2018"

[dependencies]
either = "1.6"
lalrpop-util = "0.19"
z3 = "0.9"

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }
