[package]
name = "static-bf4"
description = "Static analysis tool which checks P4 code for bugs"
version = "0.1.0"
authors = ["Mark Drobnak <mtd8050@rit.edu>"]
edition = "2018"

[dependencies]
either = "1.6"
lalrpop-util = "0.19"
logos = "0.12.0"
petgraph = { version = "0.5", default-features = false, features = ["stable_graph"] }
z3 = "0.9"

[build-dependencies]
lalrpop = "0.19"
