[package]
name = "p4-analyzer"
description = "Static analysis tool which checks P4 code for bugs"
version = "0.1.0"
authors = ["Mark Drobnak <mtd8050@rit.edu>"]
edition = "2018"

[dependencies]
either = "1.6"
env_logger = "0.8"
lalrpop-util = "0.19"
log = "0.4"
logos = "0.12.0"
petgraph = { version = "0.5", default-features = false, features = ["stable_graph"] }
z3 = "0.10"

[build-dependencies]
lalrpop = "0.19"
